deployment error resolved

--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,7 @@
 
       
         height: 100vh; 
-        width: 100%;
+        width: 2000px;
         position: relative;
           background-repeat: no-repeat;
   background-size: cover;
